cleanup, auto smoothing, teleop acceleration feedforwards